--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,44 @@ body{
     height: 100vh;
     background-color: #F9C49A;
 }
+
+header{
+    width: 100%;
+    background-color: #E8E4E1;
+    padding: 2.5rem 0;
+}
+
+header > a{
+    text-decoration: none;
+    text-align: center;
+    font-size: 2.5rem;;
+    color: #EC823A;
+}
+
+main{
+    width: 80%;
+    padding-block: 10rem;
+    background-color: #E8E4E1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0px 0px 2px rgb(0, 0, 0, 0, 0.4);
+    border-radius: .4rem;
+    outline: 3px solid #E8E4E1;
+    outline-offset: 6px;
+
+}
+
+.add_book{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,400%);
+    border: none;
+    border-radius: .4rem;
+    padding: 1rem 2rem;
+    color: #EC823A;
+    cursor: pointer;
+}
+
