--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 html{
     font-size: 62.5%;
+    min-width: 30rem;
 }
 
 body{
@@ -25,6 +26,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: start;
+}
+
+.show{
+    z-index: 99;
+    opacity: 1;
+    visibility: visible;
 }
 
 header{
@@ -42,17 +49,33 @@ header > a{
 
 main{
     width: 80%;
-    padding-block: 10rem;
+    padding-block: 3rem;
     background-color: #E8E4E1;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-40%);
     box-shadow: 0px 0px 2px rgb(0, 0, 0, 0, 0.4);
     border-radius: .4rem;
     outline: 3px solid #E8E4E1;
     outline-offset: 6px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr) ;
+    place-items: center;
+    max-height: 37rem;
+    gap: 1rem;
+    overflow: hidden;
+    overflow-y: scroll;
 
+}
+
+.card{
+    width: 100%;
+    height: 20rem;
+    background-color: #FFF;
+    border-radius: inherit;
+    box-shadow: 0px 0px 4px rgb(255, 255, 255, 0.2);
+    margin-left: 2rem;
 }
 
 .form{
@@ -60,21 +83,21 @@ main{
     height: 38rem;
     background-color: #fff;
     border-radius: .4rem;
-    z-index: 99;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     opacity: 0;
     visibility: hidden;
+    z-index: -99;
     box-shadow: 0px 0px 4px rgb(0, 0, 0, 0.3);
 }
 
 .add_book{
     position: absolute;
-    top: 50%;
+    bottom: 1rem;
     left: 50%;
-    transform: translate(-50%,400%);
+    transform: translate(-50%);
     border: none;
     border-radius: .4rem;
     padding: 1rem 2rem;
